@@ -22,15 +22,15 @@ import org.apache.hadoop.classification.InterfaceAudience;
 import java.io.Closeable;
 import java.nio.MappedByteBuffer;
 
-import org.apache.commons.logging.Log;
-import org.apache.commons.logging.LogFactory;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 /**
  * A reference to a memory-mapped region used by an HDFS client.
  */
 @InterfaceAudience.Private
 public class ClientMmap implements Closeable {
-  static final Log LOG = LogFactory.getLog(ClientMmap.class);
+  static final Logger LOG = LoggerFactory.getLogger(ClientMmap.class);
   
   /**
    * A reference to the block replica which this mmap relates to.
